fix transfer bugs